provisioning/200_apps/overlays/k3d-prod/whoami/ingress-k3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-k3d-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  rules:
  - host: whoami.k3d.lessingstrasse.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
  tls:
  - hosts:
    - whoami.k3d.lessingstrasse.org
    secretName: whoami.k3d.lessingstrasse.org
